force-app/main/default/objects/Account/fields/Address_Harvest__c.field-meta.xml
<CustomField>
    <fullName>Address_Harvest__c</fullName>
    <description>Address string for Harvest external system</description>
    <label>Harvest Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>