force-app/main/default/objects/Account/fields/Currency_Harvest__c.field-meta.xml
<CustomField>
    <fullName>Currency_Harvest__c</fullName>
    <description>3 letter currency code.
External field for Harvest</description>
    <label>Currency</label>
    <length>3</length>
    <type>Text</type>
</CustomField>