force-app/main/default/objects/Account/fields/ID_Harvest__c.field-meta.xml
<CustomField>
    <fullName>ID_Harvest__c</fullName>
    <description>External ID for Harvest.

Listed as Integer by Harvest API v2</description>
    <label>ID (Harvest)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>