force-app/main/default/objects/Account/fields/Is_Active_Harvest__c.field-meta.xml
<CustomField>
    <fullName>Is_Active_Harvest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Active (Harvest)</label>
    <type>Checkbox</type>
</CustomField>