force-app/main/default/objects/Account/fields/Updated_At_Harvest__c.field-meta.xml
<CustomField>
    <fullName>Updated_At_Harvest__c</fullName>
    <description>The Date/Time when the client was last updated on the Harvest external system</description>
    <label>Harvest Update Date</label>
    <type>DateTime</type>
</CustomField>